--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,6 @@ body{
 div.dotted {
     border-style: dotted;
     text-align: center;
-    border-width: 4px 4px 4px 4px;
-    border-color: purple;
+    border-width: 5px 5px 5px 5px;
+    border-color:red;
 }
