--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,26 @@
 body{
-    background-color: antiquewhite;
+    color: aqua;
+    background-image: url(../images/backblack.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 20px;
 }
 
 header{
     margin: 20px;
+}
+
+div.dotted {
+    margin: 20px;
+    margin-left: 33%;
+    margin-right: 33%;
+    margin-bottom: 10%;
+    border-style: dotted;
+    text-align: center;
+    border-width: 4px 4px 4px 4px;
+    border-color: purple;
 }
 
 .crystals{
@@ -18,5 +33,63 @@ header{
     border: 1px solid red;
     height: 250px;
     width: 250px;
+    border-radius: 4px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 
 }
+
+.crystal:hover{
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+}
+
+img{
+    width: 50px;
+}
+
+@media only screen and (max-width: 520px) {
+    body {
+      background-color: lightblue;
+      color: red;
+      font-size: 15px;
+      font-family: 'PT Sans', sans-serif;
+    }
+    header{
+        margin: 5px;
+    }
+    
+    div.dotted {
+        margin: 5px;
+        margin-left: 33%;
+        margin-right: 33%;
+        margin-bottom: 10%;
+        border-style: dotted;
+        text-align: center;
+        border-width: 4px 4px 4px 4px;
+        border-color: purple;
+    }
+    
+    .crystals{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    
+    .crystal{
+        border: 1px solid red;
+        height: 20%;
+        width: 20%;
+        border-radius: 4px;
+        box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    
+    }
+    
+    .crystal:hover{
+        box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+        cursor: pointer;
+    }
+    
+    img{
+        width: 50px;
+    }
+  }
