--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,8 +77,8 @@ img{
     
     .crystal{
         border: 1px solid red;
-        height: 20%;
-        width: 20%;
+        height: 75px;
+        width: 75px;
         border-radius: 4px;
         box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     
